--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "rmonkey"
-version = "0.1.0"
 authors = ["Shinichi Morimoto <shnmorimoto@gmail.com>"]
 edition = "2018"
+name = "rmonkey"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+once_cell = "1.7"
